fixed the header sizing on mobile

--- a/blocks/footer.css
+++ b/blocks/footer.css
@@ -7,7 +7,6 @@
 
 .footer__text {
   font-family: Inter, Arial, Helvetica, sans-serif;
-  font-family: Inter;
   font-size: 18px;
   font-weight: 400;
   line-height: 21.78px;
@@ -25,8 +24,6 @@
 
   .footer__text {
     font-size: 14px;
-    font-weight: 400;
     line-height: 16.94px;
-    text-align: left;
   }
 }
