--- a/blocks/header.css
+++ b/blocks/header.css
@@ -20,7 +20,7 @@
   .header {
     margin: 28px 0 42px 0;
     padding: 0 0 32px 27px;
-    max-width: 294px;
+    max-width: calc(100% - 27px);
   }
 
   .header__logo {
