--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -98,7 +98,6 @@
     width: 100%;
     text-align: center;
     font-size: 14px;
-    font-weight: 400;
     line-height: 16.94px;
   }
 
@@ -111,10 +110,7 @@
 
   .profile__title {
     text-wrap: nowrap;
-    font-size: 30px;
-    font-family: Inter;
     font-size: 22px;
-    font-weight: 500;
     line-height: 26.63px;
     text-align: center;
   }
